# pdl2palaestrAI

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: minimal.pdl.yaml
src/pdl2palaestrai/: __init__.py  cli.py  converter.py
tests/: test_converter.py
